// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabulator /> should have two different levels of headings 1`] = `
<div>
  <div
    class="sc-ac4a133f-0 fvNPWb"
    data-rttabs="true"
  >
    <div
      class="sc-ac4a133f-1 fxZtdi"
    >
      <ul
        class="sc-ac4a133f-2 fHCeXh"
        role="tablist"
      >
        <li
          aria-controls="react-tabs-1"
          aria-disabled="false"
          aria-selected="true"
          class="sc-ac4a133f-3 faZqNG react-tabs__tab--selected"
          data-rttab="true"
          id="react-tabs-0"
          role="tab"
          tabindex="0"
        >
          CDI
        </li>
        <li
          aria-controls="react-tabs-3"
          aria-disabled="false"
          aria-selected="false"
          class="sc-ac4a133f-3 faZqNG"
          data-rttab="true"
          id="react-tabs-2"
          role="tab"
        >
          CDD
        </li>
      </ul>
    </div>
    <div
      aria-labelledby="react-tabs-0"
      class="sc-ac4a133f-4 haGXHZ react-tabs__tab-panel--selected"
      id="react-tabs-1"
      role="tabpanel"
    >
      <div
        class="sc-8dcb2faa-0 gxfPDw"
      >
        <h2
          class="sc-b879fc2d-0 hyiHle"
        >
          CDI
        </h2>
      </div>
      <div
        class="sc-ac4a133f-5 yflIk"
      >
        <h3
          class="sc-b879fc2d-0 hyiHle"
        >
          titre 1
        </h3>
        <p>
          paragraphe 1
        </p>
      </div>
    </div>
    <div
      aria-labelledby="react-tabs-2"
      class="sc-ac4a133f-4 haGXHZ"
      id="react-tabs-3"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`<Tabulator /> should incease heading levels if not 0 1`] = `
<div>
  <div
    class="sc-ac4a133f-0 fvNPWb"
    data-rttabs="true"
  >
    <div
      class="sc-ac4a133f-1 fxZtdi"
    >
      <ul
        class="sc-ac4a133f-2 fHCeXh"
        role="tablist"
      >
        <li
          aria-controls="react-tabs-5"
          aria-disabled="false"
          aria-selected="true"
          class="sc-ac4a133f-3 faZqNG react-tabs__tab--selected"
          data-rttab="true"
          id="react-tabs-4"
          role="tab"
          tabindex="0"
        >
          CDI
        </li>
        <li
          aria-controls="react-tabs-7"
          aria-disabled="false"
          aria-selected="false"
          class="sc-ac4a133f-3 faZqNG"
          data-rttab="true"
          id="react-tabs-6"
          role="tab"
        >
          CDD
        </li>
      </ul>
    </div>
    <div
      aria-labelledby="react-tabs-4"
      class="sc-ac4a133f-4 haGXHZ react-tabs__tab-panel--selected"
      id="react-tabs-5"
      role="tabpanel"
    >
      <div
        class="sc-8dcb2faa-0 gxfPDw"
      >
        <h3
          class="sc-b879fc2d-0 hyiHle"
        >
          CDI
        </h3>
      </div>
      <div
        class="sc-ac4a133f-5 yflIk"
      >
        <h4
          class="sc-b879fc2d-0 hyiHle"
        >
          titre 1
        </h4>
        <p>
          paragraphe 1
        </p>
      </div>
    </div>
    <div
      aria-labelledby="react-tabs-6"
      class="sc-ac4a133f-4 haGXHZ"
      id="react-tabs-7"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`<Tabulator /> should render 1`] = `
<div>
  <div
    class="sc-ac4a133f-0 fvNPWb"
    data-rttabs="true"
  >
    <div
      class="sc-ac4a133f-1 fxZtdi"
    >
      <ul
        class="sc-ac4a133f-2 fHCeXh"
        role="tablist"
      >
        <li
          aria-controls="react-tabs-9"
          aria-disabled="false"
          aria-selected="true"
          class="sc-ac4a133f-3 faZqNG react-tabs__tab--selected"
          data-rttab="true"
          id="react-tabs-8"
          role="tab"
          tabindex="0"
        >
          CDI
        </li>
        <li
          aria-controls="react-tabs-11"
          aria-disabled="false"
          aria-selected="false"
          class="sc-ac4a133f-3 faZqNG"
          data-rttab="true"
          id="react-tabs-10"
          role="tab"
        >
          CDD
        </li>
      </ul>
    </div>
    <div
      aria-labelledby="react-tabs-8"
      class="sc-ac4a133f-4 haGXHZ react-tabs__tab-panel--selected"
      id="react-tabs-9"
      role="tabpanel"
    >
      <div
        class="sc-8dcb2faa-0 gxfPDw"
      >
        <h4
          class="sc-b879fc2d-0 hyiHle"
        >
          CDI
        </h4>
      </div>
      <div
        class="sc-ac4a133f-5 yflIk"
      >
        <h5
          class="sc-b879fc2d-0 hyiHle"
        >
          titre 1
        </h5>
        <p>
          paragraphe 1
        </p>
      </div>
    </div>
    <div
      aria-labelledby="react-tabs-10"
      class="sc-ac4a133f-4 haGXHZ"
      id="react-tabs-11"
      role="tabpanel"
    />
  </div>
</div>
`;
